fix: add letter spacing to transform as dimension token

--- a/packages/plugin-css/test/fixtures/type-transition/want.css
+++ b/packages/plugin-css/test/fixtures/type-transition/want.css
@@ -17,142 +17,142 @@
   --ds-timing-slow: 1s;
   --ds-transition-circ-in-instant: var(--ds-transition-circ-in-instant-duration) var(--ds-transition-circ-in-instant-delay) var(--ds-transition-circ-in-instant-timing-function);
   --ds-transition-circ-in-instant-duration: var(--ds-timing-instant);
-  --ds-transition-circ-in-instant-delay: 0ms;
+  --ds-transition-circ-in-instant-delay: 0;
   --ds-transition-circ-in-instant-timing-function: var(--ds-ease-circ-in);
   --ds-transition-circ-in-quick: var(--ds-transition-circ-in-quick-duration) var(--ds-transition-circ-in-quick-delay) var(--ds-transition-circ-in-quick-timing-function);
   --ds-transition-circ-in-quick-duration: var(--ds-timing-quick);
-  --ds-transition-circ-in-quick-delay: 0ms;
+  --ds-transition-circ-in-quick-delay: 0;
   --ds-transition-circ-in-quick-timing-function: var(--ds-ease-circ-in);
   --ds-transition-circ-in-moderate: var(--ds-transition-circ-in-moderate-duration) var(--ds-transition-circ-in-moderate-delay) var(--ds-transition-circ-in-moderate-timing-function);
   --ds-transition-circ-in-moderate-duration: var(--ds-timing-moderate);
-  --ds-transition-circ-in-moderate-delay: 0ms;
+  --ds-transition-circ-in-moderate-delay: 0;
   --ds-transition-circ-in-moderate-timing-function: var(--ds-ease-circ-in);
   --ds-transition-circ-in-deliberate: var(--ds-transition-circ-in-deliberate-duration) var(--ds-transition-circ-in-deliberate-delay) var(--ds-transition-circ-in-deliberate-timing-function);
   --ds-transition-circ-in-deliberate-duration: var(--ds-timing-deliberate);
-  --ds-transition-circ-in-deliberate-delay: 0ms;
+  --ds-transition-circ-in-deliberate-delay: 0;
   --ds-transition-circ-in-deliberate-timing-function: var(--ds-ease-circ-in);
   --ds-transition-circ-in-slow: var(--ds-transition-circ-in-slow-duration) var(--ds-transition-circ-in-slow-delay) var(--ds-transition-circ-in-slow-timing-function);
   --ds-transition-circ-in-slow-duration: var(--ds-timing-slow);
-  --ds-transition-circ-in-slow-delay: 0ms;
+  --ds-transition-circ-in-slow-delay: 0;
   --ds-transition-circ-in-slow-timing-function: var(--ds-ease-circ-in);
   --ds-transition-circ-in-out-instant: var(--ds-transition-circ-in-out-instant-duration) var(--ds-transition-circ-in-out-instant-delay) var(--ds-transition-circ-in-out-instant-timing-function);
   --ds-transition-circ-in-out-instant-duration: var(--ds-timing-instant);
-  --ds-transition-circ-in-out-instant-delay: 0ms;
+  --ds-transition-circ-in-out-instant-delay: 0;
   --ds-transition-circ-in-out-instant-timing-function: var(--ds-ease-circ-in-out);
   --ds-transition-circ-in-out-quick: var(--ds-transition-circ-in-out-quick-duration) var(--ds-transition-circ-in-out-quick-delay) var(--ds-transition-circ-in-out-quick-timing-function);
   --ds-transition-circ-in-out-quick-duration: var(--ds-timing-quick);
-  --ds-transition-circ-in-out-quick-delay: 0ms;
+  --ds-transition-circ-in-out-quick-delay: 0;
   --ds-transition-circ-in-out-quick-timing-function: var(--ds-ease-circ-in-out);
   --ds-transition-circ-in-out-moderate: var(--ds-transition-circ-in-out-moderate-duration) var(--ds-transition-circ-in-out-moderate-delay) var(--ds-transition-circ-in-out-moderate-timing-function);
   --ds-transition-circ-in-out-moderate-duration: var(--ds-timing-moderate);
-  --ds-transition-circ-in-out-moderate-delay: 0ms;
+  --ds-transition-circ-in-out-moderate-delay: 0;
   --ds-transition-circ-in-out-moderate-timing-function: var(--ds-ease-circ-in-out);
   --ds-transition-circ-in-out-deliberate: var(--ds-transition-circ-in-out-deliberate-duration) var(--ds-transition-circ-in-out-deliberate-delay) var(--ds-transition-circ-in-out-deliberate-timing-function);
   --ds-transition-circ-in-out-deliberate-duration: var(--ds-timing-deliberate);
-  --ds-transition-circ-in-out-deliberate-delay: 0ms;
+  --ds-transition-circ-in-out-deliberate-delay: 0;
   --ds-transition-circ-in-out-deliberate-timing-function: var(--ds-ease-circ-in-out);
   --ds-transition-circ-in-out-slow: var(--ds-transition-circ-in-out-slow-duration) var(--ds-transition-circ-in-out-slow-delay) var(--ds-transition-circ-in-out-slow-timing-function);
   --ds-transition-circ-in-out-slow-duration: var(--ds-timing-slow);
-  --ds-transition-circ-in-out-slow-delay: 0ms;
+  --ds-transition-circ-in-out-slow-delay: 0;
   --ds-transition-circ-in-out-slow-timing-function: var(--ds-ease-circ-in-out);
   --ds-transition-circ-out-instant: var(--ds-transition-circ-out-instant-duration) var(--ds-transition-circ-out-instant-delay) var(--ds-transition-circ-out-instant-timing-function);
   --ds-transition-circ-out-instant-duration: var(--ds-timing-instant);
-  --ds-transition-circ-out-instant-delay: 0ms;
+  --ds-transition-circ-out-instant-delay: 0;
   --ds-transition-circ-out-instant-timing-function: var(--ds-ease-circ-out);
   --ds-transition-circ-out-quick: var(--ds-transition-circ-out-quick-duration) var(--ds-transition-circ-out-quick-delay) var(--ds-transition-circ-out-quick-timing-function);
   --ds-transition-circ-out-quick-duration: var(--ds-timing-quick);
-  --ds-transition-circ-out-quick-delay: 0ms;
+  --ds-transition-circ-out-quick-delay: 0;
   --ds-transition-circ-out-quick-timing-function: var(--ds-ease-circ-out);
   --ds-transition-circ-out-moderate: var(--ds-transition-circ-out-moderate-duration) var(--ds-transition-circ-out-moderate-delay) var(--ds-transition-circ-out-moderate-timing-function);
   --ds-transition-circ-out-moderate-duration: var(--ds-timing-moderate);
-  --ds-transition-circ-out-moderate-delay: 0ms;
+  --ds-transition-circ-out-moderate-delay: 0;
   --ds-transition-circ-out-moderate-timing-function: var(--ds-ease-circ-out);
   --ds-transition-circ-out-deliberate: var(--ds-transition-circ-out-deliberate-duration) var(--ds-transition-circ-out-deliberate-delay) var(--ds-transition-circ-out-deliberate-timing-function);
   --ds-transition-circ-out-deliberate-duration: var(--ds-timing-deliberate);
-  --ds-transition-circ-out-deliberate-delay: 0ms;
+  --ds-transition-circ-out-deliberate-delay: 0;
   --ds-transition-circ-out-deliberate-timing-function: var(--ds-ease-circ-out);
   --ds-transition-circ-out-slow: var(--ds-transition-circ-out-slow-duration) var(--ds-transition-circ-out-slow-delay) var(--ds-transition-circ-out-slow-timing-function);
   --ds-transition-circ-out-slow-duration: var(--ds-timing-slow);
-  --ds-transition-circ-out-slow-delay: 0ms;
+  --ds-transition-circ-out-slow-delay: 0;
   --ds-transition-circ-out-slow-timing-function: var(--ds-ease-circ-out);
   --ds-transition-cubic-in-instant: var(--ds-transition-cubic-in-instant-duration) var(--ds-transition-cubic-in-instant-delay) var(--ds-transition-cubic-in-instant-timing-function);
   --ds-transition-cubic-in-instant-duration: var(--ds-timing-instant);
-  --ds-transition-cubic-in-instant-delay: 0ms;
+  --ds-transition-cubic-in-instant-delay: 0;
   --ds-transition-cubic-in-instant-timing-function: var(--ds-ease-cubic-in);
   --ds-transition-cubic-in-quick: var(--ds-transition-cubic-in-quick-duration) var(--ds-transition-cubic-in-quick-delay) var(--ds-transition-cubic-in-quick-timing-function);
   --ds-transition-cubic-in-quick-duration: var(--ds-timing-quick);
-  --ds-transition-cubic-in-quick-delay: 0ms;
+  --ds-transition-cubic-in-quick-delay: 0;
   --ds-transition-cubic-in-quick-timing-function: var(--ds-ease-cubic-in);
   --ds-transition-cubic-in-moderate: var(--ds-transition-cubic-in-moderate-duration) var(--ds-transition-cubic-in-moderate-delay) var(--ds-transition-cubic-in-moderate-timing-function);
   --ds-transition-cubic-in-moderate-duration: var(--ds-timing-moderate);
-  --ds-transition-cubic-in-moderate-delay: 0ms;
+  --ds-transition-cubic-in-moderate-delay: 0;
   --ds-transition-cubic-in-moderate-timing-function: var(--ds-ease-cubic-in);
   --ds-transition-cubic-in-deliberate: var(--ds-transition-cubic-in-deliberate-duration) var(--ds-transition-cubic-in-deliberate-delay) var(--ds-transition-cubic-in-deliberate-timing-function);
   --ds-transition-cubic-in-deliberate-duration: var(--ds-timing-deliberate);
-  --ds-transition-cubic-in-deliberate-delay: 0ms;
+  --ds-transition-cubic-in-deliberate-delay: 0;
   --ds-transition-cubic-in-deliberate-timing-function: var(--ds-ease-cubic-in);
   --ds-transition-cubic-in-slow: var(--ds-transition-cubic-in-slow-duration) var(--ds-transition-cubic-in-slow-delay) var(--ds-transition-cubic-in-slow-timing-function);
   --ds-transition-cubic-in-slow-duration: var(--ds-timing-slow);
-  --ds-transition-cubic-in-slow-delay: 0ms;
+  --ds-transition-cubic-in-slow-delay: 0;
   --ds-transition-cubic-in-slow-timing-function: var(--ds-ease-cubic-in);
   --ds-transition-cubic-in-out-instant: var(--ds-transition-cubic-in-out-instant-duration) var(--ds-transition-cubic-in-out-instant-delay) var(--ds-transition-cubic-in-out-instant-timing-function);
   --ds-transition-cubic-in-out-instant-duration: var(--ds-timing-instant);
-  --ds-transition-cubic-in-out-instant-delay: 0ms;
+  --ds-transition-cubic-in-out-instant-delay: 0;
   --ds-transition-cubic-in-out-instant-timing-function: var(--ds-ease-cubic-in-out);
   --ds-transition-cubic-in-out-quick: var(--ds-transition-cubic-in-out-quick-duration) var(--ds-transition-cubic-in-out-quick-delay) var(--ds-transition-cubic-in-out-quick-timing-function);
   --ds-transition-cubic-in-out-quick-duration: var(--ds-timing-quick);
-  --ds-transition-cubic-in-out-quick-delay: 0ms;
+  --ds-transition-cubic-in-out-quick-delay: 0;
   --ds-transition-cubic-in-out-quick-timing-function: var(--ds-ease-cubic-in-out);
   --ds-transition-cubic-in-out-moderate: var(--ds-transition-cubic-in-out-moderate-duration) var(--ds-transition-cubic-in-out-moderate-delay) var(--ds-transition-cubic-in-out-moderate-timing-function);
   --ds-transition-cubic-in-out-moderate-duration: var(--ds-timing-moderate);
-  --ds-transition-cubic-in-out-moderate-delay: 0ms;
+  --ds-transition-cubic-in-out-moderate-delay: 0;
   --ds-transition-cubic-in-out-moderate-timing-function: var(--ds-ease-cubic-in-out);
   --ds-transition-cubic-in-out-deliberate: var(--ds-transition-cubic-in-out-deliberate-duration) var(--ds-transition-cubic-in-out-deliberate-delay) var(--ds-transition-cubic-in-out-deliberate-timing-function);
   --ds-transition-cubic-in-out-deliberate-duration: var(--ds-timing-deliberate);
-  --ds-transition-cubic-in-out-deliberate-delay: 0ms;
+  --ds-transition-cubic-in-out-deliberate-delay: 0;
   --ds-transition-cubic-in-out-deliberate-timing-function: var(--ds-ease-cubic-in-out);
   --ds-transition-cubic-in-out-slow: var(--ds-transition-cubic-in-out-slow-duration) var(--ds-transition-cubic-in-out-slow-delay) var(--ds-transition-cubic-in-out-slow-timing-function);
   --ds-transition-cubic-in-out-slow-duration: var(--ds-timing-slow);
-  --ds-transition-cubic-in-out-slow-delay: 0ms;
+  --ds-transition-cubic-in-out-slow-delay: 0;
   --ds-transition-cubic-in-out-slow-timing-function: var(--ds-ease-cubic-in-out);
   --ds-transition-cubic-out-instant: var(--ds-transition-cubic-out-instant-duration) var(--ds-transition-cubic-out-instant-delay) var(--ds-transition-cubic-out-instant-timing-function);
   --ds-transition-cubic-out-instant-duration: var(--ds-timing-instant);
-  --ds-transition-cubic-out-instant-delay: 0ms;
+  --ds-transition-cubic-out-instant-delay: 0;
   --ds-transition-cubic-out-instant-timing-function: var(--ds-ease-cubic-out);
   --ds-transition-cubic-out-quick: var(--ds-transition-cubic-out-quick-duration) var(--ds-transition-cubic-out-quick-delay) var(--ds-transition-cubic-out-quick-timing-function);
   --ds-transition-cubic-out-quick-duration: var(--ds-timing-quick);
-  --ds-transition-cubic-out-quick-delay: 0ms;
+  --ds-transition-cubic-out-quick-delay: 0;
   --ds-transition-cubic-out-quick-timing-function: var(--ds-ease-cubic-out);
   --ds-transition-cubic-out-moderate: var(--ds-transition-cubic-out-moderate-duration) var(--ds-transition-cubic-out-moderate-delay) var(--ds-transition-cubic-out-moderate-timing-function);
   --ds-transition-cubic-out-moderate-duration: var(--ds-timing-moderate);
-  --ds-transition-cubic-out-moderate-delay: 0ms;
+  --ds-transition-cubic-out-moderate-delay: 0;
   --ds-transition-cubic-out-moderate-timing-function: var(--ds-ease-cubic-out);
   --ds-transition-cubic-out-deliberate: var(--ds-transition-cubic-out-deliberate-duration) var(--ds-transition-cubic-out-deliberate-delay) var(--ds-transition-cubic-out-deliberate-timing-function);
   --ds-transition-cubic-out-deliberate-duration: var(--ds-timing-deliberate);
-  --ds-transition-cubic-out-deliberate-delay: 0ms;
+  --ds-transition-cubic-out-deliberate-delay: 0;
   --ds-transition-cubic-out-deliberate-timing-function: var(--ds-ease-cubic-out);
   --ds-transition-cubic-out-slow: var(--ds-transition-cubic-out-slow-duration) var(--ds-transition-cubic-out-slow-delay) var(--ds-transition-cubic-out-slow-timing-function);
   --ds-transition-cubic-out-slow-duration: var(--ds-timing-slow);
-  --ds-transition-cubic-out-slow-delay: 0ms;
+  --ds-transition-cubic-out-slow-delay: 0;
   --ds-transition-cubic-out-slow-timing-function: var(--ds-ease-cubic-out);
   --ds-transition-linear-instant: var(--ds-transition-linear-instant-duration) var(--ds-transition-linear-instant-delay) var(--ds-transition-linear-instant-timing-function);
   --ds-transition-linear-instant-duration: var(--ds-timing-instant);
-  --ds-transition-linear-instant-delay: 0ms;
+  --ds-transition-linear-instant-delay: 0;
   --ds-transition-linear-instant-timing-function: var(--ds-ease-linear);
   --ds-transition-linear-quick: var(--ds-transition-linear-quick-duration) var(--ds-transition-linear-quick-delay) var(--ds-transition-linear-quick-timing-function);
   --ds-transition-linear-quick-duration: var(--ds-timing-quick);
-  --ds-transition-linear-quick-delay: 0ms;
+  --ds-transition-linear-quick-delay: 0;
   --ds-transition-linear-quick-timing-function: var(--ds-ease-linear);
   --ds-transition-linear-moderate: var(--ds-transition-linear-moderate-duration) var(--ds-transition-linear-moderate-delay) var(--ds-transition-linear-moderate-timing-function);
   --ds-transition-linear-moderate-duration: var(--ds-timing-moderate);
-  --ds-transition-linear-moderate-delay: 0ms;
+  --ds-transition-linear-moderate-delay: 0;
   --ds-transition-linear-moderate-timing-function: var(--ds-ease-linear);
   --ds-transition-linear-deliberate: var(--ds-transition-linear-deliberate-duration) var(--ds-transition-linear-deliberate-delay) var(--ds-transition-linear-deliberate-timing-function);
   --ds-transition-linear-deliberate-duration: var(--ds-timing-deliberate);
-  --ds-transition-linear-deliberate-delay: 0ms;
+  --ds-transition-linear-deliberate-delay: 0;
   --ds-transition-linear-deliberate-timing-function: var(--ds-ease-linear);
   --ds-transition-linear-slow: var(--ds-transition-linear-slow-duration) var(--ds-transition-linear-slow-delay) var(--ds-transition-linear-slow-timing-function);
   --ds-transition-linear-slow-duration: var(--ds-timing-slow);
-  --ds-transition-linear-slow-delay: 0ms;
+  --ds-transition-linear-slow-delay: 0;
   --ds-transition-linear-slow-timing-function: var(--ds-ease-linear);
 }
