--- a/www/src/pages/index.astro
+++ b/www/src/pages/index.astro
@@ -202,11 +202,11 @@ import DefaultLayout from '../layouts/default.astro';
   }
 
   .h3 {
-    min-height: calc(3 * var(--grid-size) - var(--border-width));
+    min-height: calc(3 * var(--grid-size));
   }
 
   .h4 {
-    min-height: calc(4 * var(--grid-size) - var(--border-width));
+    min-height: calc(4 * var(--grid-size));
   }
 
   .m2 {
