--- a/www/src/components/head-meta.astro
+++ b/www/src/components/head-meta.astro
@@ -9,7 +9,7 @@ import '../styles/app.css';
 const {
   title,
   description = 'Design systems for everyone. MIT Licensed tools for developing and managing design systems. Use the W3C design token format to build multi-platform apps quickly and easily.',
-  socialImage,
+  socialImage = `${Astro.site}/assets/social-image.png`,
 } = Astro.props;
 ---
 
@@ -25,4 +25,18 @@ const {
 <link rel="icon" href="/favicon.svg" />
 <link rel="canonical" href={`${Astro.site?.origin}${Astro.url.pathname}`} />
 <meta name="description" content={description} />
-{socialImage && <meta name="og:image" content={socialImage} />}
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="og:title" content={title} />
+<meta name="og:description" content={description} />
+<meta name="og:url" content={`${Astro.site?.origin}${Astro.url.pathname}`} />
+<meta name="og:type" content="website" />
+<meta name="og:site_name" content="Terrazzo" />
+<meta name="og:locale" content="en_US" />
+{
+  socialImage && (
+    <>
+      <meta name="og:image" content={socialImage} />
+      <meta name="twitter:image" content={socialImage} />
+    </>
+  )
+}
